
plugins {
    id 'com.twitter.teruteru128.study.java-library-conventions'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

compileJava {
    //options.fork = true
    //options.forkOptions.setMemoryInitialSize('16G')
    //options.forkOptions.setMemoryMaximumSize('16G')
    options.compilerArgs += [
            '--enable-preview'
            //, '-Xlint:preview'
    ]
}
